@@ -10,6 +10,13 @@ in the release notes and/or placed into UPDATING.
 
 All ports committers are allowed to commit to this file.
 
+20141002:
+AUTHOR: bapt@FreeBSD.org
+
+  New BUNDLE_LIBS knobs to allow a port to tell pkg(8) not to compute provided
+  libraries, this is to be used when a port bundles libraries it doesn't want
+  to expose to other ports.
+
 20141001:
 AUTHOR: tijl@FreeBSD.org
 
